--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
       integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+<link rel="stylesheet" href="css/react-datetime.css">
+
 <script src="https://code.jquery.com/jquery.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
